--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="color_primary">#6200EE</color>
+    <color name="color_primary_dark">#3700B3</color>
+    <color name="color_primary_light">#473770</color>
+    <color name="color_accent">#03DAC5</color>
     <color name="color_white">#FFFFFF</color>
+    <color name="color_accent_night">#2196F3</color>
+    <color name="color_accent_secondary">#BEAC32EE</color>
+    <color name="color_gray">#9CA9BA</color>
+    <color name="color_gray_dark">#675F7F</color>
+    <color name="color_gray_light">#ECECEC</color>
+    <color name="color_divider_dark">#1F000000</color>
+    <color name="color_divider_light">#1FFFFFFF</color>
 </resources>
