--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -15,4 +15,5 @@
     <dimen name="btn_round_size_40">40dp</dimen>
     <dimen name="avatar_round_size">112dp</dimen>
     <dimen name="space_maximum_72">72dp</dimen>
+    <dimen name="icon_size">24dp</dimen>
 </resources>
